Fixes ticket tag on mobile view of schedule.

--- a/source/stylesheets/pages/_schedule.scss
+++ b/source/stylesheets/pages/_schedule.scss
@@ -715,6 +715,8 @@ main.schedule.day-four {
     display: block;
     position: absolute;
     bottom: -21px;
+
+    @media (max-width: $screen-xs-max) { right: -21px; }
   }
 }
 
